# home-credit-scoring-api

./: .coveragerc  .coveragerc-ci  .dockerignore  .gitignore  API_USAGE.md  Dockerfile  Dockerfile.huggingface  MONITORING.md  README.md  docker-compose.yml  example_batch_request.json  example_single_request.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
data/: README.md
docs/: OPTIMIZATION_REPORT.md  RGPD_COMPLIANCE.md
models/: feature_names.pkl  label_encoders.pkl  metrics.json  model.pkl  onehot_encoder.pkl  threshold.json
notebooks/: 01_Modelisation_MLflow.ipynb  02_model_production.ipynb  03_test_model_loading.ipynb  04_drift_analysis.ipynb
src/api/: __init__.py  config.py  main.py  predictor.py  preprocessing.py  schemas.py
src/monitoring/: __init__.py  dashboard.py  drift_detector.py  logger.py  storage.py
src/monitoring/pages/: business.py  drift.py  overview.py  performance.py
src/scripts/: __init__.py  benchmark.py  calculate_baseline_metrics.py  generate_drift_report.py  init_database.py  profile_api.py  simulate_traffic.py
tests/: conftest.py  test_additional_coverage.py  test_api_endpoints.py  test_predictor.py  test_validation.py
tests/fixtures/: sample_client.json
tests/monitoring/: __init__.py  test_drift_detector.py  test_logger.py  test_storage.py
