[project]
name = "home-credit-scoring-api"
version = "1.0.0"
description = "API de scoring crédit avec FastAPI et LightGBM - Home Credit Default Risk"
authors = [{name = "Mounir Meknaci", email = "mounir@example.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

# ============================================================================
# PRODUCTION DEPENDENCIES (utilisées dans l'image Docker)
# ============================================================================
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "lightgbm>=4.6.0",
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
    "joblib>=1.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "structlog>=25.5.0",
    "evidently>=0.7.17",
    "streamlit>=1.51.0",
    "plotly>=5.24.1",
]

# ============================================================================
# DEVELOPMENT DEPENDENCIES (NE SONT PAS dans l'image Docker)
# ============================================================================
[project.optional-dependencies]
dev = [
    # ML Tracking & Optimization
    "mlflow>=3.6.0",
    "optuna>=4.6.0",
    
    # Visualization
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",

    # Interpretability
    "shap>=0.49.1",

    # Notebooks
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "ipython>=8.31.0",

    # Testing
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    
    # Alternative Models
    "xgboost>=3.1.2",
    
    # Utilities
    "python-dotenv>=1.2.1",
]

# Dashboard alternatives (séparés, pas dans Docker non plus)
dashboard = [
    "gradio>=6.0.1",
]

# Docker management (si besoin de gérer Docker depuis Python)
docker = [
    "docker>=7.1.0",
]

# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
